Image fit on mobile fixed, no topic button if no topics present

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -220,7 +220,7 @@ $detail-shadow: 1px 2px 2px hsla(0, 0%, 15%, 0.4);
   right: 0;
   left: 0;
   bottom: 0;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 37%, rgba(33, 33, 33, 0.3) 87%);
+  background: linear-gradient(to bottom, rgba(54,57,67,0) 30%, rgba(54,57,67,0.7) 100%);
 }
 
 // ALBUMS / ALBUM-DETAIL tiles
